--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "nanoid": "^4.0.2",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
